--- a/src/App.css
+++ b/src/App.css
@@ -97,8 +97,16 @@ align-items: center;
 .todo-list2,.todo-list {
  
   
-margin-right: 200px;
-  margin-left: 200px;
+
+margin:0;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    flex-direction: column;
+   
+    justify-content: space-around;
+   
+  }
 }
 
 
