--- a/src/App.css
+++ b/src/App.css
@@ -92,22 +92,16 @@ align-items: center;
 .container {
   display: flex;
  flex-direction: column;
+ justify-content: center;
 }
 
 .todo-list2,.todo-list {
- 
-  
+ justify-content: flex-start;
+  align-items: center;
+width :50%;
+margin: 0 auto;
+}
 
-margin:0;
-}
-@media screen and (min-width: 768px) {
-  .container {
-    flex-direction: column;
-   
-    justify-content: space-around;
-   
-  }
-}
 
 
 .btn-area{
